tests/reference/asr-iachar_arg_len_compiletime-1ecf087.stderr
semantic error: first argument to `iachar` must be of length one
 --> tests/errors/iachar_arg_len_compiletime.f90:2:20
  |
2 |    print *, iachar("Hello")
  |                    ^^^^^^^ 
